--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "my-new-pwa",
   "short_name": "my-new-pwa",
-  "start_url": "https://evanburg.github.io/pwa-boilerplate/",
+  "start_url": " https://avani898.github.io/INFO-6128-Share-Target-Lab/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
@@ -40,7 +40,7 @@
     }
   ],
   "share_target": {
-    "action": "/share-target/",
+    "action": " https://avani898.github.io/INFO-6128-Share-Target-Lab/",
     "method": "GET",
     "params": {
       "title": "title",
