--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "my-new-pwa",
   "short_name": "my-new-pwa",
   "start_url": " https://avani898.github.io/INFO-6128-Share-Target-Lab/",
+  "scope": " https://avani898.github.io/INFO-6128-Share-Target-Lab/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
